<resources>
    <string name="app_name">News Feed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">News Feed</string>
    <string name="nav_header_subtitle">www.theguardian.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="title_settings">News Settings</string>

    <!-- Text to display in the list when there are no news [CHAR LIMIT=NONE] -->
    <string name="no_news">No news found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!--News Sections-->
    <string name="section_life_and_style">Life and style</string>
    <string name="section_football">Football</string>
    <string name="section_politics">Politics</string>
    <string name="section_opinions">Opinion</string>
    <string name="section_world_news">World news</string>
    <string name="section_tv_radio"><![CDATA[Television & radio]]></string>

    <string name="value_section_life_and_style" translatable="false">lifeandstyle</string>
    <string name="value_section_football" translatable="false">football</string>
    <string name="value_section_politics" translatable="false">politics</string>
    <string name="value_section_opinions" translatable="false">commentisfree</string>
    <string name="value_section_world_news" translatable="false">world</string>
    <string name="value_section_tv_radio" translatable="false">tv-and-radio</string>

    <!--Order By-->
    <string name="order_by_newest">Newest</string>
    <string name="order_by_oldest">Oldest</string>
    <string name="order_by_relevance">Relevance</string>

    <string name="order_by_newest_value" translatable="false">newest</string>
    <string name="order_by_oldest_value" translatable="false">oldest</string>
    <string name="order_by_relevance_value" translatable="false">relevance</string>

    <!--Order Date-->
    <string name="order_date_published">Published</string>
    <string name="order_date_newspaper_edition">Newspaper Edition</string>
    <string name="order_date_last_modified">Last Modified</string>

    <string name="order_date_published_value" translatable="false">published</string>
    <string name="order_date_newspaper_edition_value" translatable="false">newspaper-edition</string>
    <string name="order_date_last_modified_value" translatable="false">last-modified</string>

    <!--Preference Categories-->
    <string name="pref_category_ordering">ORDERING</string>
    <string name="pref_category_navigation">NAVIGATION</string>

    <!--Preference keys-->
    <string name="key_default_section">key_default_section</string>
    <string name="key_order_date">key_order_date</string>
    <string name="key_order_by">key_order_by</string>

    <!--Preference titles-->
    <string name="title_default_section">Default section</string>
    <string name="title_order_date">Order date</string>
    <string name="title_order_by">Order by</string>

    <!--Preference default values-->
    <string name="default_value_section" translatable="false">world</string>
    <string name="default_value_order_date" translatable="false">published</string>
    <string name="default_value_order_by" translatable="false">newest</string>
    <string name="default_value_star_rating" translatable="false">3</string>

    <!--URL-->
    <string name="url_base"><![CDATA[https://content.guardianapis.com/search?format=json&from-date=2018-06-01&show-fields=headline,thumbnail,trailText&show-tags=contributor&order-by=newest&api-key=edb248f4-7da1-4302-8920-1dfd410c2585]]></string>
    <string name="url_filter_section">section</string>
    <string name="url_filter_star_rating">star-rating</string>
    <string name="url_filter_order_by">order-by</string>
    <string name="url_filter_use_date">use-date</string>
    <string name="url_building_problem">Problem building the URL</string>

    <string name="error_response_code">Error response code:</string>
    <string name="error_invalid_json_result">Problem retrieving the JSON results.</string>
    <string name="request_method">GET</string>
    <string name="charset_format">UTF-8</string>
    <string name="error_invalid_http_request">Problem making the HTTP request.</string>
    <string name="json_object_response">response</string>
    <string name="json_array_results">results</string>
    <string name="news_fields_id">id</string>
    <string name="news_fields_section_name">sectionName</string>
    <string name="news_fields_date">webPublicationDate</string>
    <string name="news_fields_web_title">webTitle</string>
    <string name="news_fields_web_url">webUrl</string>
    <string name="json_object_fields">fields</string>
    <string name="news_fields_thumbnail">thumbnail</string>
    <string name="news_fields_trail_text">trailText</string>
    <string name="json_array_tags">tags</string>
    <string name="news_fields_first_name">firstName</string>
    <string name="news_fields_last_name">lastName</string>
    <string name="error_parse_json_result">Problem parsing the JSON results</string>
    <string name="date_parser_char">T</string>

</resources>
