<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_navigation">
        <ListPreference
            android:defaultValue="@string/default_value_section"
            android:entries="@array/default_section"
            android:entryValues="@array/default_section_values"
            android:key="@string/key_default_section"
            android:title="@string/title_default_section" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_ordering">
        <ListPreference
            android:defaultValue="@string/default_value_order_by"
            android:entries="@array/order_by"
            android:entryValues="@array/order_by_values"
            android:key="@string/key_order_by"
            android:title="@string/title_order_by" />

        <ListPreference
            android:defaultValue="@string/default_value_order_date"
            android:entries="@array/order_date"
            android:entryValues="@array/order_date_values"
            android:key="@string/key_order_date"
            android:title="@string/title_order_date" />
    </PreferenceCategory>

</PreferenceScreen>