<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_world_news"
            android:icon="@drawable/ic_world_news"
            android:title="@string/section_world_news" />
        <item
            android:id="@+id/nav_politics"
            android:icon="@drawable/ic_politics"
            android:title="@string/section_politics" />
        <item
            android:id="@+id/nav_opinions"
            android:icon="@drawable/ic_opinion"
            android:title="@string/section_opinions" />
        <item
            android:id="@+id/nav_lifestyle"
            android:icon="@drawable/ic_lifestyle"
            android:title="@string/section_life_and_style" />
        <item
            android:id="@+id/nav_football"
            android:icon="@drawable/ic_football"
            android:title="@string/section_football" />
        <item
            android:id="@+id/nav_tv_radio"
            android:icon="@drawable/ic_television"
            android:title="@string/section_tv_radio" />
    </group>

</menu>
